--- a/testWcfAppIIS/Web.config
+++ b/testWcfAppIIS/Web.config
@@ -3,6 +3,7 @@
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+    <add key="ConnectionString" value="Data Source=192.168.7.72\STONER;Initial Catalog=AdventureWorks2012;Persist Security Info=False;User ID=team_project;Password=K@r@m@z0v;Connect Timeout=5;" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
@@ -28,8 +29,8 @@
       </endpointBehaviors>
     </behaviors>
     <services>
-      <service name="testWcfAppIIS.ServiceWcfApp" behaviorConfiguration="ServiceBehavior">
-        <endpoint binding="webHttpBinding" contract="testWcfAppIIS.IServiceWcfApp" behaviorConfiguration="web"></endpoint>
+      <service name="TestWcfAppIis.ServiceWcfApp" behaviorConfiguration="ServiceBehavior">
+        <endpoint binding="webHttpBinding" contract="TestWcfAppIis.IServiceWcfApp" behaviorConfiguration="web"></endpoint>
       </service>
       
     </services>
